--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
             <code>&ltlink href="styles.css" type="text/css" rel="stylesheet"&gt;</code>
             <p class="desc">add in stylesheet</p>
         </article>
-        <article><code>header, main, section, article, aside, footer</code><p class="desc">semantics to define</p></article>
+        <article><code>&ltheader&gt; &lt/header&gt;
+            <br>&ltmain&gt; &lt/main&gt; 
+            <br>&ltsection&gt; &lt/section&gt;
+            <br>&nbsp; &ltarticle&gt; &lt/article&gt; 
+            <br>&nbsp; &ltaside&gt; &lt/aside&gt; 
+            <br>&ltfooter&gt; &lt/footer&gt;</code><p class="desc">semantics to define</p></article>
     </section>
     <section id="css">
         <h2>CSS</h2>
