modified git remote add cheat

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <article><code>git branch branchName</code><p class="desc">create new branch</p></article>
         <article><code>git checkout branchName</code><p class="desc">switch branches to start working in new branch</p></article>
         <article><code>git merge branchName</code><p class="desc">merge branches together</p></article>
-        <article><code>git remote add origin remoteName remoteURL</code><p class="desc">connect to a local repo</p></article>
+        <article><code>git remote add origin remoteName remoteURL</code><p class="desc">connect to a remote repo</p></article>
         <article><code>git clone remoteURL</code><p class="desc">git clone</p></article>
         <article><code>git pull branchName repoName</code><p class="desc">get the latest verion of repo</p></article>
     </section>
