change font size

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h2>GIT</h2>
         <article><code>git init</code><p class="desc">turn directory into empty git repo</p></article>
         <article><code>git add .</code><p class="desc">add all files into staging area for commiting</p></article>
-        <article><code>git add fileName.ext</code><p class="desc">add all files into staging area for commiting</p></article>
+        <article><code>git add fileName.ext</code><p class="desc">add fileName.ext into staging area for commiting</p></article>
         <article><code>git commit -m "my commit message"</code><p class="desc">commit staged files to repo</p></article>
         <article><code>git push --all</code><p class="desc">push committed files to repo</p></article>
         <article><code>git branch branchName</code><p class="desc">create new branch</p></article>
