add links section

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li><a href="#css">CSS</a></li>
                 <li><a href="#terminal">Terminal</a></li>
                 <li><a href="#git">Git</a></li>
+                <li><a href="#links">Links</a></li>
             </ul>
         </nav>
     </header>
@@ -68,6 +69,13 @@
         <article><code>git remote add origin remoteName remoteURL</code><p class="desc">connect to a remote repo</p></article>
         <article><code>git clone remoteURL</code><p class="desc">git clone</p></article>
         <article><code>git pull branchName repoName</code><p class="desc">get the latest verion of repo</p></article>
+    </section>
+    <section id="links">
+        <article><a href="https://developer.mozilla.org/en-US/" target="_blank">MDN</a></article>
+        <article><a href="https://www.w3schools.com" target="_blank">W3Schools</a></article>
+        <article><a href="https://discuss.codecademy.com" target="_blank">Codecademy Forums</a></article>
+        <article><a href="https://stackoverflow.com" target="_blank">Stack Overflow</a></article>
+        <article><a href="https://www.w3schools.com/colors/colors_picker.asp" target="_blank">CSS Color Picker</a></article>
     </section>
 </main>
 <footer>
