edit links section - add h2 and color for links

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         <article><code>git pull branchName repoName</code><p class="desc">get the latest verion of repo</p></article>
     </section>
     <section id="links">
+        <h2>Links</h2>
         <article><a href="https://developer.mozilla.org/en-US/" target="_blank">MDN</a></article>
         <article><a href="https://www.w3schools.com" target="_blank">W3Schools</a></article>
         <article><a href="https://discuss.codecademy.com" target="_blank">Codecademy Forums</a></article>
