added in color palettes link

--- a/index.html
+++ b/index.html
@@ -169,6 +169,13 @@
             >CSS Color Picker</a
           >
         </article>
+        <article>
+            <a
+              href="https://coolors.co/palettes/trending"
+              target="_blank"
+              >Color Palettes</a
+            >
+          </article>
       </section>
     </main>
     <footer>
