--- a/index.html
+++ b/index.html
@@ -48,15 +48,6 @@
           >
           <p class="desc">add in stylesheet</p>
         </article>
-        <article>
-          <code
-            >&ltheader&gt; &lt/header&gt; <br />&ltmain&gt; &lt/main&gt;
-            <br />&ltsection&gt; &lt/section&gt; <br />&nbsp; &ltarticle&gt;
-            &lt/article&gt; <br />&nbsp; &ltaside&gt; &lt/aside&gt;
-            <br />&ltfooter&gt; &lt/footer&gt;</code
-          >
-          <p class="desc">semantics to define</p>
-        </article>
       </section>
       <!-----------CSS SECTION-------------->
       <section id="css">
@@ -68,6 +59,23 @@
           >
           <p class="desc">global reset</p>
         </article>
+        <article>
+            <code
+              >*{<br />margin: 0; <br />padding: 0; <br />box-sizing: border-box;
+              <br />width: 100%;<br />}</code
+            >
+            <p class="desc">global reset</p>
+          </article>
+          <article><code>display: flex;</code><p class="desc">convert to flex box. Options: flex, inline-flex</p></article>
+          <article><code>flex-grow: 3;</code><p class="desc">how much space to absorb when growing</p></article>
+          <article><code>flex-shrink: 3;</code><p class="desc">how much space to give up when shrinking</p></article>
+          <article><code>flex-direction: column;</code><p class="desc">direction of flex. options: column or row</p></article>
+          <article><code>flex-wrap: wrap;</code><p class="desc">allow overflow of flex items. Options: wrap, nowrap</p></article>
+          <article><code>flex-basis: 200px;</code><p class="desc">specify initial size of flex</p></article>
+          <article><code>flex: 2 1 200px;</code><p class="desc">specify flex-grow, flex-shrink and flex-basis in one line</p></article>
+          <article><code>flex-flow: wrap col;</code><p class="desc">specify flex-wrap and flex-direction in one line</p></article>
+          <article><code>justify-content: space-around;</code><p class="desc">put space between flex items along main axis. Options: space-between, center, flex-start, flex-end</p></article>
+          <article><code>align-items: center;</code><p class="desc">put space between items along cross axis. Options: space-between, center, flex-start, flex-end</p></article>
       </section>
       <!-----------TERMINAL SECTION-------------->
       <section id="terminal">
