add cheats for grid

--- a/index.html
+++ b/index.html
@@ -60,22 +60,76 @@
           <p class="desc">global reset</p>
         </article>
         <article>
-            <code
-              >*{<br />margin: 0; <br />padding: 0; <br />box-sizing: border-box;
-              <br />width: 100%;<br />}</code
-            >
-            <p class="desc">global reset</p>
-          </article>
-          <article><code>display: flex;</code><p class="desc">convert to flex box. Options: flex, inline-flex</p></article>
-          <article><code>flex-grow: 3;</code><p class="desc">how much space to absorb when growing</p></article>
-          <article><code>flex-shrink: 3;</code><p class="desc">how much space to give up when shrinking</p></article>
-          <article><code>flex-direction: column;</code><p class="desc">direction of flex. options: column or row</p></article>
-          <article><code>flex-wrap: wrap;</code><p class="desc">allow overflow of flex items. Options: wrap, nowrap</p></article>
-          <article><code>flex-basis: 200px;</code><p class="desc">specify initial size of flex</p></article>
-          <article><code>flex: 2 1 200px;</code><p class="desc">specify flex-grow, flex-shrink and flex-basis in one line</p></article>
-          <article><code>flex-flow: wrap col;</code><p class="desc">specify flex-wrap and flex-direction in one line</p></article>
-          <article><code>justify-content: space-around;</code><p class="desc">put space between flex items along main axis. Options: space-between, center, flex-start, flex-end</p></article>
-          <article><code>align-items: center;</code><p class="desc">put space between items along cross axis. Options: space-between, center, flex-start, flex-end</p></article>
+          <code>display: flex;</code>
+          <p class="desc">convert to flex box. Options: flex, inline-flex</p>
+        </article>
+        <article>
+          <code>flex-grow: 3;</code>
+          <p class="desc">how much space to absorb when growing</p>
+        </article>
+        <article>
+          <code>flex-shrink: 3;</code>
+          <p class="desc">how much space to give up when shrinking</p>
+        </article>
+        <article>
+          <code>flex-direction: column;</code>
+          <p class="desc">direction of flex. options: column or row</p>
+        </article>
+        <article>
+          <code>flex-wrap: wrap;</code>
+          <p class="desc">
+            allow overflow of flex items. Options: wrap, nowrap
+          </p>
+        </article>
+        <article>
+          <code>flex-basis: 200px;</code>
+          <p class="desc">specify initial size of flex</p>
+        </article>
+        <article>
+          <code>flex: 2 1 200px;</code>
+          <p class="desc">
+            specify flex-grow, flex-shrink and flex-basis in one line
+          </p>
+        </article>
+        <article>
+          <code>flex-flow: wrap col;</code>
+          <p class="desc">specify flex-wrap and flex-direction in one line</p>
+        </article>
+        <article>
+          <code>justify-content: space-around;</code>
+          <p class="desc">
+            put space between flex items along main axis. Options:
+            space-between, center, flex-start, flex-end
+          </p>
+        </article>
+        <article>
+          <code>align-items: center;</code>
+          <p class="desc">
+            put space between items along cross axis. Options: space-between,
+            center, flex-start, flex-end
+          </p>
+        </article>
+        <article>
+          <code>display: grid;</code>
+          <p class="desc">converts div to grid</p>
+        </article>
+        <article>
+          <code>grid-template: 200px 200px / 25% 25% 2fr 1fr;</code>
+          <p class="desc">
+            determines number, width and height of rows and columns of grid
+          </p>
+        </article>
+        <article>
+          <code>gap: 10px 15px;</code>
+          <p class="desc">determine space between the row and column</p>
+        </article>
+        <article>
+          <code>grid-area: 1/1/span 2/span 2;</code>
+          <p class="desc">
+            define size of item in grid - row start, column start, row end,
+            column end
+          </p>
+        </article>
       </section>
       <!-----------TERMINAL SECTION-------------->
       <section id="terminal">
@@ -178,12 +232,10 @@
           >
         </article>
         <article>
-            <a
-              href="https://coolors.co/palettes/trending"
-              target="_blank"
-              >Color Palettes</a
-            >
-          </article>
+          <a href="https://coolors.co/palettes/trending" target="_blank"
+            >Color Palettes</a
+          >
+        </article>
       </section>
     </main>
     <footer>
