--- a/index.html
+++ b/index.html
@@ -234,7 +234,10 @@
         <article>
           <a href="https://coolors.co/palettes/trending" target="_blank"
             >Color Palettes</a
-          >
+            >
+        </article>
+        <article>
+          <a href="https://necolas.github.io/normalize.css/" target="_blank">Normalize.css</a>
         </article>
       </section>
     </main>
