add scaling img and vids

--- a/index.html
+++ b/index.html
@@ -130,6 +130,34 @@
             column end
           </p>
         </article>
+        <article>
+          <code>grid-auto-rows: 100px;</code>
+          <p class="desc">
+            define implicit size of additional rows
+          </p>
+        </article>
+        <article>
+          <code>grid-auto-columns: 100px;</code>
+          <p class="desc">
+            define implicit size of additional columns
+          </p>
+        </article>
+        <article>
+          <code>.container {
+            width: 50%;
+            height: 200px;
+            overflow: hidden;
+          }
+          
+          .container img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+          }</code>
+          <p class="desc">
+            scale images and videos
+          </p>
+        </article>
       </section>
       <!-----------TERMINAL SECTION-------------->
       <section id="terminal">
