add scaling bg img

--- a/index.html
+++ b/index.html
@@ -158,6 +158,17 @@
             scale images and videos
           </p>
         </article>
+        <article>
+          <code>body {
+            background-image: url('#');
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+          }</code>
+          <p class="desc">
+            scale background image
+          </p>
+        </article>
       </section>
       <!-----------TERMINAL SECTION-------------->
       <section id="terminal">
