--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
           >
           <p class="desc">add in stylesheet</p>
         </article>
+        <article>
+          <code
+            >&ltmeta name="viewport" content="width=device-width, initial-scale=1"&gt;</code
+          >
+          <p class="desc">ensure scalability for responsive websites</p>
+        </article>
       </section>
       <!-----------CSS SECTION-------------->
       <section id="css">
