add media query

--- a/index.html
+++ b/index.html
@@ -175,6 +175,16 @@
             scale background image
           </p>
         </article>
+        <article>
+          <code>@media only screen and (min-width:768px) and (max-width: 1024px) and (orientation:landscape){
+            .page-title, .page-description {
+            float: left;
+              width: 20em;
+          }</code>
+          <p class="desc">
+            media queries for responsiveness across different devices/screens
+          </p>
+        </article>
       </section>
       <!-----------TERMINAL SECTION-------------->
       <section id="terminal">
